<resources>
    <string name="app_name">CRS</string>
    <string name="title_login_activity">Entrar</string>
    <string name="title_activity_main">Obras</string>
    <string name="title_activity_settings">Configurações</string>

    <string name="action_login">Entrar</string>

    <string name="server_url_pref_key">server_url</string>
    <string name="server_url_pref_title">Endereço do Web service</string>
    <string name="server_url_pref_default_value">http://crs.libertsolutions.com.br/api/</string>
    <string name="server_url_pref_dialog_title">Confirme a URL do Web service</string>
    <string name="server_url_dialog_message">Informe o endereço completo incluindo http://</string>
    <string name="server_url_pref_desc">
        Endereço do Web service que o aplicativo comunicará para envio e recebimento de dados.
    </string>

    <string name="server_auth_key_pref_key">server_auth_key</string>
    <string name="server_auth_key_pref_title">Chave de autenticação</string>
    <string name="server_auth_key_pref_default_value">626c6f63736b696e</string>
    <string name="server_auth_key_pref_dialog_title">Confirme a chave de autenticação</string>
    <string name="server_auth_key_dialog_message">
        Informe o texto da chave de autenticação para conceder acesso ao Web service
    </string>
    <string name="server_auth_key_pref_desc">
        Chave autenticável para obter acesso aos dados disponibilizados pelo Web service.
    </string>
    <string name="project_id_caption">Código</string>
    <string name="customer_name_caption">Cliente</string>
    <string name="work_date_caption">Em</string>
    <string name="action_logout">Sair</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_checkin">Check-ins</string>
    <string name="action_check_all">Marcar todos</string>
    <string name="works_running">%1$d obra(s) em execução</string>
    <string name="no_work_running">Nenhuma obra em execução</string>
    <string name="work_steps_running">%1$d etapa(s) da obra em execução</string>
    <string name="no_work_step_running">Nenhuma etapa em execução</string>
    <string name="checkins_finished">%1$d check-in(s) concluído(s)</string>
    <string name="no_checkin_finished">Nenhum check-in concluído</string>
    <string name="menu_search">Buscar</string>
    <string name="work_search_query_hint">Por cliente ou código</string>
    <string name="msg_unable_to_sign_in_no_network">
        Não foi possível entrar. Verifique sua conexão com a internet
    </string>
    <string name="msg_fix_errors_to_sign_in">Corrija os erros para continuar com login</string>
    <string name="hint_cpf_required">CPF deve ser informado</string>
    <string name="hint_cpf_invalid">CPF deve conter 11 dígitos</string>
    <string name="hint_password_required">Senha deve ser informada</string>
    <string name="title_dialog_signing_in">Entrando</string>
    <string name="msg_dialog_signing_in">
        Por favor aguarde enquanto validamos suas credenciais…
    </string>
    <string name="msg_settings_not_applied">As configurações não foram feitas corretamente</string>
    <string name="title_dialog_sign_in_failed">Falha ao tentar entrar</string>
    <string name="text_dialog_button_ok">OK</string>
    <string name="title_dialog_invalid_credentials">Problemas com credenciais</string>
    <string name="msg_dialog_invalid_credentials">Seu CPF ou senha estão incorretos</string>
    <string name="title_dialog_error_loading_data_from_server">Falha ao tentar obter dados do servidor</string>
    <string name="title_dialog_error_loading_data_from_local">Falha ao tentar listar dados do banco de dados</string>
    <string name="title_dialog_error_saving_data">Falha ao tentar salvar dados no banco de dados</string>
    <string name="msg_user_not_logged">Você não está logado. Entre para poder marcar como feito!</string>
    <string name="tagline_importing_data">
        Importando todas informações das obras. Tudo será carregado automaticamente quando for concluída!
    </string>
    <string name="content_please_wait">Por favor aguarde…</string>
    <string name="error_importing_data">Falha ao importar dados do servidor</string>
    <string name="error_updating_data">Falha ao atualizar dados do servidor</string>
    <string name="error_sending_data">Falha ao enviar dados para servidor</string>
    <string name="checkins_all_finished">Todos check-ins concluídos</string>
    <string name="title_dialog_error_retrieving_data">Falha ao tentar recuperar dados no banco de dados</string>
    <string name="title_no_data">Nenhuma obra</string>
    <string name="title_no_checkins">Nenhum check-in</string>
    <string name="tagline_no_data">Não há dados disponíveis ou nenhuma obra está em execução</string>
    <string name="tagline_no_checkins">Esta etapa da obra não tem checklist</string>
    <string name="title_no_connection">Sem conexão</string>
    <string name="tagline_no_connection">Não há conexão com a internet e não há obras importadas</string>
    <string name="title_importing_data">Importação em andamento…</string>
    <string name="no_connection_to_force_update">
        Não foi possível atualizar. Verifique a conexão de rede e deslize para baixo para tentar novamente.
    </string>
    <string name="checkins_already_done">Todos check-ins já estão marcados!</string>
    <string name="checkins_status_cannot_change">Não é permitido desfazer o check-in!</string>
    <string name="checkin_search_query_hint">Ex.: Sala ou 1380x550</string>
    <string name="checkin_measures_caption">Medidas</string>
    <string name="product_type_caption">Tipo</string>
    <string name="checkin_location_caption">Localização</string>
    <string name="product_line_caption">Linha</string>
    <string name="product_processing_caption">Tratamento</string>
    <string name="checkin_done">Já está feito</string>
    <string name="checkin_not_done">Marcar como feito</string>
    <string name="welcome_title">Bem-vindo</string>
</resources>
