<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeightLarge"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal"
    >

    <View
        android:id="@id/workStatus"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        tools:background="@color/statusPending"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:stretchColumns="*"
        android:gravity="center_vertical"
        >

        <TableRow>

            <TextView
                android:id="@+id/workCodeCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/project_id_caption"
                />

            <TextView
                android:id="@id/workCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="JUL.379.15-REV05/CRIXÁS"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/customerNameCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/customer_name_caption"
                />

            <TextView
                android:id="@id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Gabriella e Cristiano"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/workDateCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/work_date_caption"
                />

            <TextView
                android:id="@id/workDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="26/01/2016"
                />
        </TableRow>

    </TableLayout>

</LinearLayout>