<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:elevation="3dp"
        app:contentPadding="16dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <View
                android:id="@id/checkin_status"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_status_pending"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingStart="32dp"
                >

                <TextView
                    android:id="@id/product_measures_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/checkin_measures_caption"
                    />

                <TextView
                    android:id="@id/product_measures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:maxLines="1"
                    android:ellipsize="middle"
                    android:layout_toRightOf="@id/product_measures_caption"
                    android:layout_toEndOf="@id/product_measures_caption"
                    android:layout_alignBaseline="@id/product_measures_caption"
                    tools:text="601x712"
                    />

                <ToggleButton
                    android:id="@id/checkin_toggle_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/product_measures_caption"
                    android:layout_centerHorizontal="true"
                    android:textOn="@string/checkin_done"
                    android:textOff="@string/checkin_not_done"
                    />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>